--- a/scss/custom/_cv.scss
+++ b/scss/custom/_cv.scss
@@ -39,19 +39,19 @@ body{
 	line-height: 165%;
 	
 	@include media-query-horizontal($screen-lg, $screen-md + 1){
-		font-size: 70%;	
+		font-size: 80%;	
 	}
 
 	@include media-query-horizontal($screen-md, $screen-sm + 1){
-		font-size: 50%;
+		font-size:60%;
 	}
 
 	@include media-query-horizontal($screen-sm, $screen-xs + 1){
-		font-size: 30%;
+		font-size: 40%;
 	}
 
 	@include media-query-horizontal($screen-xs, 0){
-		font-size: 10%;
+		font-size: 20%;
 	}
 }
 
@@ -90,13 +90,15 @@ h1, h2{
 h1{
 	text-transform: uppercase;
 	font-size: 300%;
-	padding-bottom:15px;
-	padding-top: 18px;
+	padding-top: 3%;
+	padding-bottom:2%;
+	
 }
 
 h2{
 	font-size: 140%;
 	font-weight: bold;
+	padding: 0.5% 0;
 }
 
 h3{
@@ -114,6 +116,9 @@ p.date{
 	text-align: right;
 }
 
+li{
+	word-wrap: break-word;
+}
 ul{
 	margin: -5px 0;
 }
